Trabajando en pestaña Mapas: problemas en variables globales y en la función de onMapClick. Cambios en las interfaces de todas las páginas. Añadido actualizar ubicación en editar Usuario.

--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,7 +1,13 @@
-<ion-header>
+<ion-header translucent>
+
   <ion-toolbar>
-    <ion-title>admin works</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+
+    <ion-title class="ion-text-center">Administrador</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
