--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,4 +1,4 @@
-.card{
+/* .card{
     height: 300px;
     margin-top: auto;
     margin-bottom: auto; 
@@ -12,7 +12,7 @@
     color: red;
     text-align: center;
     
-}  
+}   */
 
 
 /* img{
@@ -75,4 +75,14 @@ ion-card-content{
 
 /* ion-card{
   width: 100%;
+} */
+
+#map {
+    position: relative;
+    height: inherit;
+    width: inherit;
+}
+/* #mapid{
+    height: 40%;
+    width: 40%;
 } */
