--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar color="success">
-    <ion-title>Home</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -11,16 +13,22 @@
       <ion-row class="ion-justify-content-center">
         <img src="../../../assets/Tenis Ball Icon.png"/>
       </ion-row>
-      <ion-card-title>Accede a Rackets4All</ion-card-title>
-      <ion-card-subtitle>Con tu Usuario de Rackets4All o autentícate con Facebook</ion-card-subtitle>
+
+      <ion-card-title>Rackets4All</ion-card-title>
+      <ion-card-subtitle>¿Tienes una cuenta de Facebook? Puedes acceder a Rackets4All con ella</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <ion-row class="ion-justify-content-center">
+
+      <ion-button expand="block" color="secondary" (click)=goLogin()>Acceder</ion-button>
+      <ion-button expand="block" color="secondary" (click)=goRegister()>Crear una cuenta</ion-button>
+
+      <!--ion-row class="ion-justify-content-center">
         <ion-button class="button icon icon-left ion-finger-print" (click)=goLogin()>Login</ion-button>
       </ion-row>
       <ion-row class="ion-justify-content-center">
         <ion-button class="button icon icon-left ion-create" (click)=goRegister()>Register</ion-button>
-      </ion-row>
+      </ion-row-->
+
     </ion-card-content>
   </ion-card>
 
