--- a/src/app/pages/main-tabs/usuarios/usuarios.page.html
+++ b/src/app/pages/main-tabs/usuarios/usuarios.page.html
@@ -1,17 +1,30 @@
 <ion-app>
+  
+  <ion-header translucent>
+
+    <ion-toolbar color="success">
+      <ion-buttons slot="start">
+        <ion-menu-button auto-hide="false"></ion-menu-button>
+      </ion-buttons>
+
+      <ion-title class="ion-text-center">Usuarios</ion-title>
+    </ion-toolbar>
+
+  </ion-header>
+
   <ion-content padding="true">
 
     <ion-card>
       <form [formGroup]="listaUsuariosForm" (ngSubmit)="getUsuarios()">
         <ion-card-header>
 
-          <ion-card-title class="ion-text-center">Usuarios</ion-card-title>
+          <!--ion-card-title class="ion-text-center">Usuarios</ion-card-title-->
             
           <ion-button color="dark" fill="outline" (click)="toggleVisibleFilters()">
             <ion-icon slot="icon-only" name="menu"></ion-icon>
           </ion-button>
           <ion-button color="dark" fill="outline" type="submit">
-            <ion-icon slot="icon-only" name="refresh"></ion-icon>
+            <ion-icon slot="icon-only" name="search"></ion-icon>
           </ion-button>
 
         </ion-card-header>
@@ -88,7 +101,7 @@
           <!--ion-list-header>Lista de Usuarios</ion-list-header-->
             <ion-item *ngFor = "let usuario of listaUsuarios">
               <ion-avatar slot="start">
-                <img [src]="'http://localhost:7000/'+usuario.rutaimagen">
+                <img [src]="this.ambiente.path + usuario.rutaimagen">
               </ion-avatar>
               <ion-label> 
                 {{usuario.username}}
