--- a/src/app/pages/main-tabs/usuarios/usuarios.page.html
+++ b/src/app/pages/main-tabs/usuarios/usuarios.page.html
@@ -107,7 +107,7 @@
                   <ion-label>Valoración {{usuario.valoracion}}</ion-label>
                 </ion-chip>
               </ion-label>
-              <ion-button fill="clear" color="success" size="large">
+              <ion-button fill="clear" color="success" size="large" (click)= "goAddPartida(usuario.username)">
                 <ion-icon name="add"></ion-icon>
               </ion-button>
             </ion-item>
