--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -7,10 +7,16 @@
   </ion-header>
 
   <ion-content>
-    <pre *ngIf="auth.userProfile$ | async as profile">
-      <code>{{ profile | json }}</code>
-    </pre>
-    <pre *ngIf="auth.authenticationState">
+    <!-- <pre *ngIf="auth.userProfile$ | async as profile">
+      <ion-card-header>
+        <ion-card-title>Perfil</ion-card-title>
+      </ion-card-header>
+      <code>{{ profile | json }}</code>                                //volver a poner alomejor
+      <code>{{ profile.given_name}}</code>
+      <code>{{ profile.email}}</code>
+    </pre> -->
+    <!-- <pre *ngIf="auth.authenticationState"> -->
+      <pre >
       <ion-row>
         <ion-col size="12">
           <ion-card>
@@ -21,7 +27,7 @@
             <ion-card-content>
               <ion-item>
                 <ion-avatar>
-                    <ion-img [src]="path+ localperfil.rutaimagen"></ion-img>
+                    <ion-img [src]="path + localperfil.rutaimagen"></ion-img> 
                 </ion-avatar>
               </ion-item>
 
