determinar ganador de una patida

--- a/src/app/pages/main-tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/main-tabs/dashboard/dashboard.page.html
@@ -52,7 +52,7 @@
               <ion-card>
                 <ion-card-header>
                   <ion-card-title>
-                    Tus Partidos Activos
+                    <ion-button (click)= "goPartidas()">Tus Partidos Activos </ion-button>
                   </ion-card-title>
                 </ion-card-header>
               </ion-card>
