--- a/src/app/pages/newpartida/newpartida.page.html
+++ b/src/app/pages/newpartida/newpartida.page.html
@@ -63,7 +63,7 @@
     <div>
       <h3>Partidas de {{organizador}}</h3>
       <ion-item *ngFor="let partida of listapartidas">
-        <ion-label>{{partida._id}}</ion-label>
+        <ion-label>Organizada por: {{partida.organizador}}</ion-label>
       </ion-item>
     </div>
 
