--- a/src/app/pages/chatroom/chatroom.page.scss
+++ b/src/app/pages/chatroom/chatroom.page.scss
@@ -24,4 +24,24 @@ page-chat-room {
     .message_row {
         background-color: #fff;
     }
+    
+}
+
+/* #res{
+    margin-right: end;
+    background-color: blue;
+    align-items: right;
+
+} */
+#res{
+    margin-right: 0px;
+    margin-left: 500px;
+    float: right;
+
+}
+#u{
+    background-color: #1E8FD5;
+}
+#textsize{
+    font-size: 20px;
 }
