--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -7,8 +7,8 @@
       </ion-buttons>
 
       <ion-buttons slot="end">
-        <ion-button (click)="auth.logout()">
-          <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+        <ion-button (click)="auth.logout()" color="danger" size="large">
+          <ion-icon name="power-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
 
