--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -141,9 +141,9 @@
               </div>
             </div>
 
-            <div class="formGroup">
+            <!--div class="formGroup">
               <ion-item>
-                <!-- <ion-label class="text">Ubicacion: </ion-label> -->
+                <ion-label class="text">Ubicacion: </ion-label>
                 <ion-input formControlName="ubicacion" type="text" name="ubicacion" placeholder="Ciudad de residencia" [(ngModel)]="ubicacion" ></ion-input>
                 <div *ngIf="registerForm.controls['ubicacion'].valid">
                   <a class="success">&#9989;</a>
@@ -159,7 +159,7 @@
                 </ng-container>
                 
               </div>
-            </div>
+            </div-->
 
           </ion-list>
             <div>
