--- a/src/app/pages/main-tabs/mapas/mapas.page.html
+++ b/src/app/pages/main-tabs/mapas/mapas.page.html
@@ -8,7 +8,7 @@
       </ion-buttons>
 
       <ion-buttons slot="end">
-        <ion-button (click)="testReverseGeocode()">
+        <ion-button (click)="this.loadPosition()">
           <ion-icon slot="icon-only" name="locate-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
