--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -6,7 +6,7 @@
       <ion-tab-bar slot="bottom" color="dark">
   
         <ion-tab-button tab="dashboard">
-          <ion-icon name="grid"></ion-icon>
+          <ion-icon name="grid-outline"></ion-icon>
           <ion-label>Dashboard</ion-label>
         </ion-tab-button>
     
