--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -114,7 +114,7 @@
                 </div>
               </div>
   
-              <div class="formGroup">
+              <!--div class="formGroup">
                 <ion-item lines="none">              
                   <ion-input  formControlName="ubicacion" type="text" name="ubicacion" placeholder="Ubicacion" value={{user.ubicacion}} [(ngModel)]="ubicacion" ></ion-input>
                   <div *ngIf="editperfilForm.controls['ubicacion'].valid">
@@ -130,7 +130,7 @@
                     </div>
                   </ng-container>
                 </div>
-              </div>
+              </div-->
   
               <div class="formGroup">
                 <ion-item lines="none">
@@ -149,17 +149,6 @@
                   </ng-container>
                 </div>
               </div>
-
-              <!--div>
-                <ion-row>
-                  <ion-col size="12"><ion-label>Guardar ubicación actual</ion-label></ion-col>
-                  <ion-col>
-                    <ion-button *ngIf="locationSelected" color="success" fill="solid" (click)="toggleLocationSelected()"><ion-icon name="location-outline"></ion-icon></ion-button>
-                    <ion-button *ngIf="!locationSelected" color="success" fill="outline" (click)="toggleLocationSelected()"><ion-icon name="location-outline"></ion-icon></ion-button> 
-                  </ion-col>
-                </ion-row> 
-              </div-->
-
 
               <ion-item lines="none">
                 Guardar ubicación actual
